# shopstream-databricks-data-platform

./: .env.example  .gitignore  .markdownlint.json  README.md  databricks.bundle.yml  databricks.yml  pyproject.toml
.github/: copilot-instructions.md
data_generators/: generate_customers.py  generate_orders.py  generate_returns.py  seed_bronze_orders_returns.py
data_platform/ingestion/: customers_lakeflow.yml  products_lakeflow.yml
data_platform/optimizations/: broadcast_joins.py
data_platform/pipelines/bronze/: ingest_customers_batch.py  ingest_orders_streaming.py  ingest_products_batch.py  ingest_returns_autoloader.py
data_platform/pipelines/gold/: customer_metrics.py  product_performance.py  revenue_daily.py
data_platform/pipelines/silver/: dim_customers_scd2.py  dim_products_scd1.py  dim_regions_truncate_load.py  fct_orders.py  fct_returns.py
docs/: hands-on-labs.md  reading-order.md
docs/architecture-and-design/: data-model.md  system-design.md
docs/hands-on-labs/: hands-on-labs.md
docs/setup-and-tooling/: getting-started.md
